# simple-rust-soft-ray-tracer

./: Cargo.toml  README.md
src/: lib.rs  main.rs  render.rs  scene.rs
