[package]
name = "smr"
version = "0.1.0"
authors = ["bohadi <bohadi@users.noreply.github.com>"]

[lib]
name = "smr"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
time                  = "0.1.38"
image                 = "0.16.0"
vulkano               = "0.7.1"
winit                 = "0.8.2"
vulkano-win           = "0.7.1"
vulkano-shader-derive = "0.7.1"
vulkano-shaders       = "0.7.1"
glsl-to-spirv         = "0.1.3"
cgmath                = "0.15.0"
#kiss3d                = "0.11.0"
#nphysics3d            = "0.7.2"
#ncollide              = "0.13.0"
#nalgebra              = "0.13.0"
#caper                 = "0.8.2"
#imgui                 = "0.0.15"
#conrod                = "0.55.1"
